fixed alignment error

--- a/style.css
+++ b/style.css
@@ -105,13 +105,20 @@ li {
 h1 {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+.align-all{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
 
 .align {
     display: flex;
+    align-items: center;
 
     justify-content: center;
     width:1000px;
-    margin-left:400px;
+  
     padding: 50px;
     
 }
@@ -220,11 +227,11 @@ h1 {
     
 }
 .footer{
+
     background-color: #1F2937;
     color: #fff;
     text-align: center;
     padding-top:30px;
-    padding-bottom:30px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
